--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,6 +28,11 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
+    <!-- Speaker Fragment-->
+    <string name="placeholder_speaker_designation">holder_speaker_designation</string>
+    <string name="placeholder_speaker_name">holder_speaker_name</string>
+    <string name="placeholder_speaker_bio">holder_speaker_bio</string>
+
     <!--Settings-->
     <string name="settings_mode">Mode</string>
     <string name="default_mode">Developer</string>
