added menu's, searchable, Code Refactoring, fixes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="title_section_sponsors">Sponsors</string>
     <string name="title_section_map">Map</string>
 
-    <!-- Main menu -->
+    <!-- Main menu_speakers -->
     <string name="menu_tracks">Tracks</string>
     <string name="menu_bookmarks">Bookmarks</string>
     <string name="menu_speakers">Speakers</string>
