--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
     <string name="menu_speakers">Speakers</string>
     <string name="menu_sponsor">Sponsors</string>
     <string name="menu_map">Map</string>
+    <string name="menu_abc">ABC</string>
     <string name="session">Session detail</string>
 
     <!--Navigation Drawer-->
