added location fragment, search sessions by locations

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="title_section_speakerlist">Speakers</string>
     <string name="title_section_sponsors">Sponsors</string>
     <string name="title_section_map">Map</string>
+    <string name="title_section_location">Locations</string>
 
     <!-- Main menu_speakers -->
     <string name="menu_tracks">Tracks</string>
@@ -14,7 +15,7 @@
     <string name="menu_speakers">Speakers</string>
     <string name="menu_sponsor">Sponsors</string>
     <string name="menu_map">Map</string>
-    <string name="menu_abc">ABC</string>
+    <string name="menu_locations">Locations</string>
     <string name="session">Session detail</string>
 
     <!--Navigation Drawer-->
