--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,8 +35,14 @@
     <string name="placeholder_speaker_bio">holder_speaker_bio</string>
 
     <!--Settings-->
-    <string name="settings_mode">Mode</string>
-    <string name="default_mode">Developer</string>
+    <string name="settings_mode_api"> API Mode</string>
+    <string name="default_mode_api">Developer</string>
+
+    <string name="settings_mode_notification"> Notification Mode</string>
+    <string name="default_mode_notification">10 mins before</string>
+    <string name="hour_before">1 hour </string>
+    <string name="twelve_hours_before">12 hours </string>
+
 
     <!--Social-->
     <string name="linkedin">linkedin</string>
