Adding of Widget #143

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -72,4 +72,8 @@
     <string name="error">Error</string>
     <string name="ok">OK</string>
 
+    <string name="empty_list">No Bookmarks Available</string>
+    <string name="bullet">"•"</string>
+    <string name="bookmarks">Bookmarks</string>
+
 </resources>
