--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,9 +41,9 @@
     <string name="default_mode_api">Developer</string>
 
     <string name="settings_mode_notification"> Notification Mode</string>
-    <string name="default_mode_notification">10 mins before</string>
-    <string name="hour_before">1 hour </string>
-    <string name="twelve_hours_before">12 hours </string>
+    <string name="default_mode_notification">10</string>
+    <string name="hour_before">1</string>
+    <string name="twelve_hours_before">12</string>
 
 
     <!--Social-->
