Material Look to Speaker Detail + Fix #296

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -79,4 +79,5 @@
     <string name="invalid_url">Invalid Url</string>
     <string name="dialog_action_ok">Ok</string>
     <string name="dialog_error_title">Error</string>
+    <string name="website">website</string>
 </resources>
