--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -81,5 +81,11 @@
     <string name="dialog_error_title">Error</string>
     <string name="website">website</string>
     <string name="notification_key">notification</string>
->>>>>>> Fixed #300 not showing the preference's value of NotificationMode + Fixed #295
+    <string name="menu_speaker_sort">Sort</string>
+    <string name="dialog_sort_title">Sort By</string>
+
+    <!--Sort Dialog text-->
+    <string name="dialog_sort_organisation">Organisation</string>
+    <string name="dialog_sort_country">Country</string>
+    <string name="dialog_sort_name">Speaker Name</string>
 </resources>
