--- a/android/app/src/main/res/values-zh-rCN/strings.xml
+++ b/android/app/src/main/res/values-zh-rCN/strings.xml
@@ -18,15 +18,15 @@
    
     <string name="action_settings">设定</string>
     <!--Settings-->
-    <string name="settings_mode_download">只用WiFi下载更新</string>
-    <string name="summary_mode_download">如果打开应用程序，则不会使用移动数据更新计划</string>
+    <string name="settings_mode_download">只使用WiFi下载更新</string>
+    <string name="summary_mode_download">开启后将不会使用蜂窝数据更新日程</string>
     <string name="download_mode_key">互联网模式</string>
     
     <string name="settings_mode_notification">通知模式</string>
-    <string name="default_mode_notification">十分钟前</string>
+    <string name="default_mode_notification">每十分钟</string>
     <string name="notification_key">通知</string>
     
-     <string name="settings_mode_timezone">显示附近时间</string>
+     <string name="settings_mode_timezone">显示当地时间</string>
     <string name="summary_mode_timezone">使用您的当地时间，而不是会议的当地时间。</string>
     <string name="timezone_mode_key">当地时间模式</string>
     
@@ -41,7 +41,7 @@
     
     <!--Search Titles-->
     <string name="search_hint_tracks">搜寻议程轨</string>
-    <string name="refresh_failed">重新整理失败</string>
+    <string name="refresh_failed">刷新失败</string>
     <string name="download_failed">下载失败，请检查你的网路连线</string>
     <string name="download_complete">下载完成</string>
     <string name="share_links">分享网址</string>
@@ -132,7 +132,7 @@
     <string name="silverInt">4</string>
     <string name="bronzeInt">5</string>
     
-    <string name="display_offline_schedule">无互联网连接，显示旧日程</string>
+    <string name="display_offline_schedule">无互联网连接，显示离线日程</string>
     <string name="retry_download">重试</string>
     <string name="permissions_given">授予的权限！</string>
     <string name="storage_permission_rationale">需要存储权限才能保存地图数据以供离线使用。</string>
@@ -147,5 +147,5 @@
     <string name="check_connection">检查连接</string>
     <string name="open_your_web_brower_to_finish_connection_setting">打开网络浏览器完成连接设置</string>
     <string name="removed_bookmark">书签已删除</string>
-    <string name="added_bookmark">添加书签</string>
+    <string name="added_bookmark">书签已添加</string>
 </resources>
