--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -13,6 +13,7 @@
     <string name="menu_map">Map</string>
     <string name="menu_locations">Locations</string>
     <string name="menu_settings">Settings</string>
+    <string name="menu_share">Share</string>
     <string name="menu_about">About us</string>
     <string name="session">Session Detail</string>
     <string name="menu_schedule" translatable="false">Schedule</string>
@@ -164,5 +165,10 @@
     <string name="open_your_web_brower_to_finish_connection_setting">Open your web browser to finish connection setting</string>
     <string name="removed_bookmark">Bookmark Removed</string>
     <string name="added_bookmark">Bookmark Added</string>
+
+    <!--Share App strings-->
+    <string name="whatsapp_promo_msg_template">Hey, join me at the event! - %s</string>
+    <string name="error_msg_retry">Please Retry Again</string>
+    <string name="app_share_url">https://play.google.com/store/apps/details?id=%s</string>
 
 </resources>
