--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -162,6 +162,7 @@
 
     <!--Notification strings-->
     <string name="check_connection">Check Connection</string>
+    <string name="undo">Undo</string>
     <string name="open_your_web_brower_to_finish_connection_setting">Open your web browser to finish connection setting</string>
     <string name="removed_bookmark">Bookmark Removed</string>
     <string name="added_bookmark">Bookmark Added</string>
