Added date to notifications and widget. (#1103)

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -72,6 +72,7 @@
 
     <string name="empty_list">No Bookmarks Available</string>
     <string name="bullet">"•"</string>
+    <string name="bulletWithSpaces">"•  "</string>
     <string name="bookmarks">Bookmarks</string>
 
     <!--Speaker-->
