--- a/android/app/src/main/res/values-id/strings.xml
+++ b/android/app/src/main/res/values-id/strings.xml
@@ -13,7 +13,6 @@
     <string name="menu_settings">Pengaturan</string>
     <string name="menu_about">Tetang Kami</string>
     <string name="session">Perincian Sesi</string>
-    <string name="menu_schedule" translatable="false">Schedule</string>
     <string name="descriptionEmpty">Deskripsi: Akan ditambahkan</string>
 
 
@@ -38,10 +37,6 @@
     <string name="default_mode_language">Bahasa Inggris</string>
 
     <!--Social-->
-    <string name="linkedin" translatable="false">linkedin</string>
-    <string name="twitter" translatable="false">twitter</string>
-    <string name="fb" translatable="false">fb</string>
-    <string name="github" translatable="false">github</string>
 
     <!--Menu Titles-->
     <string name="search">Cari</string>
@@ -154,5 +149,7 @@
     <string name="open_your_web_brower_to_finish_connection_setting">Bukalah penjelajah web untuk menyelesaikan pengaturan koneksi</string>
     <string name="removed_bookmark">Bookmark telah dihapuskan</string>
     <string name="added_bookmark">Bookmark telah ditambahkan</string>
+    <string name="menu_schedule" translatable="false"></string>
+    <string name="twitter" translatable="false"></string>
 
 </resources>
