--- a/android/app/src/main/res/values-vi/strings.xml
+++ b/android/app/src/main/res/values-vi/strings.xml
@@ -1,5 +1,4 @@
 <resources>
-    <string name="app_name" translatable="false">OpenEvent</string>
 
     <string name="title_section_tracks">Chủ đề</string>
     <string name="title_section_speakerlist">Diễn giả</string>
@@ -15,7 +14,6 @@
     <string name="menu_settings">Cài đặt</string>
     <string name="menu_about">Giới thiệu</string>
     <string name="session">Chi tiết về sự kiện</string>
-    <string name="menu_schedule" translatable="false">Thời gian biểu</string>
     <string name="descriptionEmpty">Mô tả: sẽ sớm được cập nhật</string>
 
 
@@ -46,10 +44,6 @@
 
 
     <!--Social-->
-    <string name="linkedin" translatable="false">linkedin</string>
-    <string name="twitter" translatable="false">twitter</string>
-    <string name="fb" translatable="false">fb</string>
-    <string name="github" translatable="false">github</string>
 
     <!--Menu Titles-->
     <string name="search">Tìm kiếm</string>
@@ -164,5 +158,6 @@
     <string name="open_your_web_brower_to_finish_connection_setting">Mở trình duyệt web để hoàn tất cài đặt kết nối</string>
     <string name="removed_bookmark">Đã xóa dấu trang</string>
     <string name="added_bookmark">Đã thêm dấu trang</string>
+    <string name="twitter" translatable="false"></string>
 
 </resources>
