--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -4,6 +4,12 @@
     <string name="title_section_tracks">Tracks</string>
     <string name="title_section_speakerlist">Speakers</string>
     <string name="title_section_location">Locations</string>
+    <string name="item_track">This is a track symbol.</string>
+    <string name="session_bookmark_status">This image shows the session bookmark status.</string>
+    <string name="session_share_icon">This is the share icon.</string>
+    <string name="session_calender_icon">This is a calender icon.</string>
+    <string name="session_clock_icon">This is a clock icon.</string>
+    <string name="session_location_icon">This is a location icon.</string>
 
     <!-- Main menu_speakers -->
     <string name="menu_tracks">Tracks</string>
