--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="session_bookmark_status">This image shows the session bookmark status.</string>
     <string name="session_speaker_icon">This is the speaker icon.</string>
     <string name="session_share_icon">This is the share icon.</string>
-    <string name="session_calender_icon">This is a calender icon.</string>
+    <string name="session_calender_icon">This is a calendar icon.</string>
     <string name="session_clock_icon">This is a clock icon.</string>
     <string name="session_location_icon">This is a location icon.</string>
 
