fix: Fix layout warnings and RTL (#1303)
* fix: Fix layout warnings and RTL

Fix the layout warnings, RTL support and add tools attribute for development aide

Fixes #1296

* Resolve merge conflicts on layout

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -190,5 +190,9 @@
     <!--Branch integration strings-->
     <string name="branch_key_debug">key_test_gjCjmUMS5Dp6u7IukMSDujjhDwbPyjbB</string>
     <string name="branch_key_live">key_live_pavjjGHL2Al0qWQzjRQFvcddwscRvkcp</string>
-  
+
+    <!--Misc Strings-->
+    <string name="time_separator" translatable="false">\u0020-\u0020</string>
+    <string name="delimiter" translatable="false">,\u0020\u0020</string>
+
 </resources>
